after adding signalr

--- a/src/TaskFlow.API/appsettings.json
+++ b/src/TaskFlow.API/appsettings.json
@@ -17,7 +17,7 @@
     "ConnectionString": "localhost:6379"
   },
   "Jwt": {
-    "Secret": "your-super-secret-key-that-is-at-least-32-characters-long-for-production",
+    "Secret": "8j}8^Yw$*8o.r@cbVl$nrZGc|Rn$Gq.7sblD/FC:I,c",
     "Issuer": "TaskFlow",
     "Audience": "TaskFlowUsers",
     "ExpirationInDays": 7
