--- a/tests/TaskFlow.UnitTests/TaskFlow.UnitTests.csproj
+++ b/tests/TaskFlow.UnitTests/TaskFlow.UnitTests.csproj
@@ -20,6 +20,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0-preview.1.25066.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\TaskFlow.API\TaskFlow.API.csproj" />
+    <ProjectReference Include="..\..\src\TaskFlow.Application\TaskFlow.Application.csproj" />
+    <ProjectReference Include="..\..\src\TaskFlow.Core\TaskFlow.Core.csproj" />
+    <ProjectReference Include="..\..\src\TaskFlow.Infrastructure\TaskFlow.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
