--- a/src/TaskFlow.API/appsettings.Development.json
+++ b/src/TaskFlow.API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=taskflow;Username=taskflow;Password=dev_password"
+  },
+  "Jwt": {
+    "Secret": "DevOnly_TaskFlow_JWT_Secret_Key_32chars!"
   }
 }
