--- a/src/TaskFlow.API/appsettings.json
+++ b/src/TaskFlow.API/appsettings.json
@@ -17,9 +17,15 @@
     "ConnectionString": "localhost:6379"
   },
   "Jwt": {
-    "Secret": "8j}8^Yw$*8o.r@cbVl$nrZGc|Rn$Gq.7sblD/FC:I,c",
     "Issuer": "TaskFlow",
     "Audience": "TaskFlowUsers",
-    "ExpirationInDays": 7
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:3000",
+      "https://localhost:3000"
+    ]
   }
 }
