--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: postgres:16-alpine
     environment:
       POSTGRES_DB: taskflow
-      POSTGRES_USER: taskflow
-      POSTGRES_PASSWORD: dev_password
+      POSTGRES_USER: ${POSTGRES_USER:-taskflow}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-dev_password}
     ports:
       - "5432:5432"
     volumes:
@@ -14,8 +14,8 @@ services:
   mongodb:
     image: mongo:7
     environment:
-      MONGO_INITDB_ROOT_USERNAME: taskflow
-      MONGO_INITDB_ROOT_PASSWORD: dev_password
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER:-taskflow}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-dev_password}
     ports:
       - "27017:27017"
     volumes:
