--- a/src/TaskFlow.Infrastructure/TaskFlow.Infrastructure.csproj
+++ b/src/TaskFlow.Infrastructure/TaskFlow.Infrastructure.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
