--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,26 +1,15 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
-        "name": "Launch TaskFlow.API",
-        "type": "coreclr",
-        "request": "launch",
-        "preLaunchTask": "build",
-        "program": "${workspaceFolder}/src/TaskFlow.API/bin/Debug/net10.0/TaskFlow.API.dll",
-        "args": [],
-        "cwd": "${workspaceFolder}/src/TaskFlow.API",
-        "stopAtEntry": false,
-        "serverReadyAction": {
-            "action": "openExternally",
-            "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
-        },
-        "env": {
-            "ASPNETCORE_ENVIRONMENT": "Development"
-        },
-        "sourceFileMap": {
-            "/Views": "${workspaceFolder}/src/TaskFlow.API/Views"
+    "configurations": [
+        {
+            "name": "Launch TaskFlow.API",
+            "type": "dotnet",
+            "request": "launch",
+            "projectPath": "${workspaceFolder}/src/TaskFlow.API/TaskFlow.API.csproj",
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            }
         }
-    }]
+    ]
 }
